# mcp-stdio

./: CHANGELOG.md  CLAUDE.md  README.ja.md  README.md  pyproject.toml  release-please-config.json  server.json
.github/workflows/: release-please.yml  release.yml  test.yml
src/mcp_stdio/: __init__.py  __main__.py  cli.py  oauth.py  relay.py  token_store.py
tests/: test_cli.py  test_oauth.py  test_relay.py  test_token_store.py
