[project]
name = "mcp-stdio"
dynamic = ["version"]
description = "Stdio-to-HTTP relay for MCP servers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Shigechika AIKAWA" }]
keywords = ["mcp", "stdio", "proxy", "relay", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.scripts]
mcp-stdio = "mcp_stdio.cli:main"

[project.urls]
Homepage = "https://github.com/shigechika/mcp-stdio"
Issues = "https://github.com/shigechika/mcp-stdio/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-httpx>=0.35.0"]

[tool.hatch.version]
path = "src/mcp_stdio/__init__.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
